k8s/ap-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: shop-active-service  # 👈 Live Production Traffic
  namespace: shop-dev
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: my-bluegreen-app
---
apiVersion: v1
kind: Service
metadata:
  name: shop-preview-service # 👈 Staging / QA Testing Traffic
  namespace: shop-dev
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: my-bluegreen-app

---
apiVersion: v1
kind: Service 
metadata:
  name: sm-svc-stable
  namespace: shop-dev
spec:
  selector: 
    app: my-app
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service 
metadata:
  name: sm-svc-canary
  namespace: shop-dev
spec:
  selector: 
    app: my-app
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service 
metadata:
  name: deploy-app
  namespace: shop-dev 
spec:
  selector:
    app: my-app 
  ports:
    - port: 80
      targetPort: 80
