k8s/require-jwt.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: require-jwt
  namespace: shop-dev
spec:
  selector:
    matchLabels:
      app: my-app

  action: ALLOW

  rules:
    - from:
        - source:
            requestPrincipals:
              - "testing@secure.istio.io/testing@secure.istio.io"
